--- a/style/style.css
+++ b/style/style.css
@@ -13,3 +13,95 @@
 	height:100%;
 	width: 100%;
 }
+#photo{
+	position: relative;
+	overflow: hidden;
+	left: 0;
+	max-height: 550px;
+	transition: left .5s;
+}
+#photo li{
+	position: relative;
+	float: left;
+}
+#photo li .desc{
+	position: absolute;
+	top: 450px;
+	left: 0;
+	font-size: 14px;
+	color: #fff;
+	transition: left .3s;
+	background-color: rgba(0,0,0,0.4);
+	padding: 15px;
+	transform: translate(-50%, 0);
+	opacity: 0;
+}
+#photo img{
+	width: 100%;
+}
+.wrapper{
+	overflow: hidden;
+	position: relative;
+}
+.wrapper .hover_show{
+	transition: opacity .4s;
+	opacity: 0;
+}
+.wrapper:hover .hover_show{
+	opacity: 1;
+}
+#prev, #next{
+	position: absolute;
+	top: 250px;
+	background-color: rgba(0,0,0,0.6);
+	width: 50px;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
+	z-index: 999;
+	font-size: 24px;
+	color: #d5d5d5;
+	cursor: pointer;
+	user-select: none;
+}
+#prev{
+	left: 0;
+}
+#next{
+	right: 0;
+}
+#index{
+	position: absolute;
+	bottom: 10px;
+	left: 50%;
+	height: 10px;
+	z-index: 999;
+	transform: translate(-50%, 0);
+}
+#index span{
+	border-radius: 50%;
+	width: 10px;
+	height: 10px;
+	background-color: #aaa;
+	float: left;
+	margin: 0 7px;
+	cursor: pointer;
+}
+#index span.active{
+	background-color: #fff;
+}
+.font1{
+	width: 200px;
+	height: 200px;
+	position: absolute;
+	top: 100px;
+	text-align: center;
+	left: -199px;
+	z-index: 999;
+	background-color: #999;
+	opacity: 0.5;
+	transition: 0.5s;
+}
+.button{
+	cursor: pointer;
+      }
