--- a/style/style.css
+++ b/style/style.css
@@ -51,6 +51,7 @@
 	opacity: 1;
 }
 #prev, #next{
+	transition: 0.3s all;
 	position: absolute;
 	top: 250px;
 	background-color: rgba(0,0,0,0.6);
@@ -65,6 +66,7 @@
 	user-select: none;
 }
 #prev{
+	transition: 0.3s all;
 	left: 0;
 }
 #next{
@@ -104,4 +106,109 @@
 }
 .button{
 	cursor: pointer;
-      }
+}
+.leader_logo {
+	width: 100%;
+	height: 
+}
+.leader_logo ul{
+	width:100%; 
+	max-width:1600px; 
+	margin:auto; 
+	overflow:hidden;
+}
+.leader_logo ul li{
+	position: relative;
+    float: left;
+    width: 16.625%;
+    padding-top: 15%;
+    background: #f1f0ed;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s;
+}
+.leader_logo ul .t1{
+	
+}
+.leader_logo ul li b{
+    box-shadow: inset 0 0 0 8px #f1e3d2;
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1);
+}
+.leader_logo ul li b{
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 130px;
+    height: 130px;
+    margin: -65px 0 0 -65px;
+    border-radius: 50%;
+    background: #fff;
+    box-shadow: inset 0 0 0 0 #f1e3d2;
+    opacity: 0;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    transform: scale(0);
+}
+.leader_logo ul li:hover{
+	cursor: pointer;
+	background-color: #EEDDC7;
+}
+.leader_logo ul li:hover>b{
+	display: block;
+    box-shadow: inset 0 0 0 8px #f1e3d2;
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    transform: scale(1);
+}
+.leader_logo ul li i{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 70px;
+    height: 70px;
+    margin: -35px 0 0 -35px;
+    background: url(../images/pro_type.png) no-repeat;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.leader_logo ul .t1 i{
+	background-position: 0 0;
+}
+.leader_logo ul .t2 i{
+	background-position: 0 -70px;;
+}
+.leader_logo ul .t3 i{
+	background-position: 0 -140px;
+}
+.leader_logo ul .t4 i{
+	background-position: 0 -210px;
+}
+.leader_logo ul .t5 i{
+	background-position: 0 -280px;
+}
+.leader_logo ul .t6 i{
+	background-position: 0 -350px;
+}
+.leader_logo ul li span{
+   	position: absolute;
+    bottom: 13%;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    color: #333;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    transition: 0.3s;
+}
+.leader_logo ul li span:hover{
+	color: #7e4430;
+}
