--- a/style/style.css
+++ b/style/style.css
@@ -349,3 +349,63 @@
 	height: 100%;
 	width: 100%;
 }
+.bottom_box{
+	overflow: hidden;
+	padding: 10px;
+	margin-top: 20px;
+	width: 100%;
+}
+.bottom_box .title ul{
+	padding-left: 15px;
+	width: 20%;
+	float: left;
+}
+.bottom_box .title{
+	width: 100%;
+}
+.bottom_box .title ul li{
+	position: relative;
+	padding-top:10px;
+	padding-left: 10px;
+	width: 100%;
+}
+.bottom_box .title ul li a{
+	font-size: 14px;
+	color: #717171;
+}
+.bottom_box .title ul li a::before{
+	content: "";
+	position: absolute;
+	top: 25px;
+	left: 2px;
+	width: 3px;
+	height: 3px;
+	background-color: #717171;
+	border-radius: 50%;
+}
+.bottom_box .title ul h4{
+	padding-bottom: 5px;
+	border-bottom: 1px solid #D5D5D5;
+}
+.bottom_footer{
+	position: relative;
+	border-bottom:1px solid #D5D5D5;
+	text-align: center;
+}
+.bottom_footer ul li{
+	padding-left: 10px;
+	float: left;
+}
+.bottom_footer ul li a{
+	color: #666;
+}
+.bottom_footer ul li a:hover{
+	color: #a4002c;
+}
+.friend_link{
+	padding: 40px;
+	position: absolute;
+	top: 50%;
+	left: 30%;
+
+}
