--- a/style/chanping.css
+++ b/style/chanping.css
@@ -1,30 +1,52 @@
-.list ul{
+.list_photo{
 	margin-top: 10px;
-}
-.list ul li{
+	animation: fadeIn 0.8s 0.2s both;
 	height: 100%;
-    margin-right: 2%;
-    margin-bottom: 3%;
+	overflow: hidden;
+	width: 100%;
+	background: url(../images/keting_bg.jpg);
+}
+.list_photo ul li{
+	transition: 0.3s all;
+	margin-top: 2%;
+	margin-left: 1%;
+	margin-bottom: 1%;
     background: #fff;
-    -webkit-animation: downIn 0.8s 0.6s both;
-    -moz-animation: downIn 0.8s 0.6s both;
     animation: downIn 0.8s 0.6s both;
 	position: relative;
-	padding: 240px 10px 55px 0px;
-	width: 23%;
 	float: left;
+	width: 23%;
+	padding: 10px 10px;
 }
-.list ul li a img{
-	position: absolute;
-    top: 0;
-    left: 0;
+.list_photo ul li p{
+	padding-bottom: 10px;
+	margin-top: 5px;
+}
+.list_photo ul li a img{
+	opacity: 1;
+	width: 100%;
+	height: 100%;
+
+}   
+.list_photo ul li h4{
+ 	margin: 2.5% 5%;
+    color: #d55c5c;
+}
+.list_photo ul li a img:hover{
+	opacity: 0.7;
+}
+.list_photo ul li a span{
+    color: #666;
+	display: none;
+    background: #F2F2F2;
+    position: absolute;
     width: 100%;
-    opacity: 1;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    transition: 0.3s;
+    bottom: -20px;
+    left: 0px;
+    transition: bottom .3s;
 }
-.list ul li a p{
-	position: absolute;
-	top: 190px;
+.list_photo ul li a:hover>span{
+	display: block;
+	bottom: 0px;
+    transition: .3s all;
 }
